# IACorr

./: .gitignore  README.md  pyproject.toml
.ipynb_checkpoints/: LICENSE-checkpoint  README-checkpoint.md  example_notebook-checkpoint.ipynb
examples/: run_example.ipynb
examples/.ipynb_checkpoints/: run_example-checkpoint.ipynb
src/IACorr/: compute_IA_corr_from_data.py
src/IACorr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/IACorr/.ipynb_checkpoints/: __init__-checkpoint.py
tests/: test_import.py
