[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "IACorr"                           # The package name on PyPI (must be unique)
version = "0.1.0"                         # Matches __version__ in __init__.py
description = "Compute correlations from data for intrinsic alignment analysis."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  { name="Elizabeth Gonzalez, IA Euclid group", email="egonzalez@pic.es" }
]
requires-python = ">=3.8"
dependencies = ["numpy", "scipy", "treecorr", "astropy", "pandas"]                     

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
